图片相关处理

--- a/窗口拖拽.html
+++ b/窗口拖拽.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <style>
     #draggable {
@@ -14,9 +15,9 @@
     }
   </style>
 </head>
+
 <body>
-  <div id="draggable">
-  </div>
+  <div id="draggable"></div>
 
   <script>
     const draggable = document.getElementById('draggable');
@@ -56,4 +57,5 @@
     }
   </script>
 </body>
+
 </html>
